--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,14 +25,18 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
           <% for (let id in urls) { %>
-            <tr>
-              <td><%= id %></td>
-              <td><%= urls[id] %></td>
-            </tr>
+            <form method="POST" action="/urls/<%= id %>/delete">
+              <tr>
+                <td><%= id %></td>
+                <td><%= urls[id] %></td>
+                <td><button type="submit" class="btn btn-primary">Delete</button></td>
+              </tr>
+            </form>
           <% } %>
         </tbody>
       </table>
