--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -20,6 +20,19 @@
         <p class="card-text">
           Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
         </p>
+        <form method="POST" action="/urls/<%= id %>/edit">
+          <div class="form-group mb-2">
+            <label for="newLongURL">Edit target URL:</label>
+            <input
+              class="center-block"
+              type="text"
+              name="newLongURL"
+              value="<%= longURL %>"
+              style="width: 300px; margin: 1em"
+            />
+            <button type="submit" class="btn btn-primary">Update</button>
+          </div>
+        </form>
       </div>
       <div class="card-footer text-muted"></div>
     </div>
