add edit buttons for each URL

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,18 +25,22 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
             <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
           <% for (let id in urls) { %>
-            <form method="POST" action="/urls/<%= id %>/delete">
-              <tr>
-                <td><%= id %></td>
-                <td><%= urls[id] %></td>
+            <tr>
+              <td><%= id %></td>
+              <td><%= urls[id] %></td>
+              <form method="POST" action="/urls/<%= id %>/edit">
+                <td><button type="submit" class="btn btn-primary">Edit</button></td>
+              </form>
+              <form method="POST" action="/urls/<%= id %>/delete">
                 <td><button type="submit" class="btn btn-primary">Delete</button></td>
-              </tr>
-            </form>
+              </form>
+            </tr>
           <% } %>
         </tbody>
       </table>
