--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,6 +18,9 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
       <form class="form-inline" action="/login" method="POST">
+        <% if (username) {%>
+          <label>Logged in as: <%= username %></label>
+        <% } %>
         <input
           type="text"
           name="username"
