--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,18 +17,21 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
-      <form class="form-inline" action="/login" method="POST">
-        <% if (username) {%>
+      <% if (username) {%>
+        <form class="form-inline" action="/logout" method="POST">
           <label>Logged in as: <%= username %></label>
-        <% } %>
-        <input
-          type="text"
-          name="username"
-          placeholder="Username"
-          style="width: 300px; margin: 1em"
-        />
-        <button type="submit" class="btn btn-primary">Login</button>
-      </form>
+        </form>
+      <% } else { %>
+        <form class="form-inline" action="/login" method="POST">
+          <input
+            type="text"
+            name="username"
+            placeholder="Username"
+            style="width: 300px; margin: 1em"
+          />
+          <button type="submit" class="btn btn-primary">Login</button>
+        </form>
+      <% } %>
     </div>
     
   </nav>
