refactor to use user database

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,17 +17,23 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
-      <% if (username) {%>
+      <% if (user) {%>
         <form class="form-inline" action="/logout" method="POST">
-          <label>Logged in as: <%= username %></label>
+          <label>Logged in as: <%= user.email %></label>
           <button type="submit" class="btn btn-primary">Logout</button>
         </form>
       <% } else { %>
         <form class="form-inline" action="/login" method="POST">
           <input
             type="text"
-            name="username"
+            name="email"
             placeholder="Username"
+            style="width: 300px; margin: 1em"
+          />
+          <input
+            type="text"
+            name="password"
+            placeholder="Password"
             style="width: 300px; margin: 1em"
           />
           <button type="submit" class="btn btn-primary">Login</button>
