--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,27 +18,18 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
       <% if (user) {%>
+        <label>Logged in as: <%= user.email %></label>
         <form class="form-inline" action="/logout" method="POST">
-          <label>Logged in as: <%= user.email %></label>
           <button type="submit" class="btn btn-primary">Logout</button>
         </form>
       <% } else { %>
-        <form class="form-inline" action="/login" method="POST">
-          <input
-            type="text"
-            name="email"
-            placeholder="Username"
-            style="width: 300px; margin: 1em"
-          />
-          <input
-            type="text"
-            name="password"
-            placeholder="Password"
-            style="width: 300px; margin: 1em"
-          />
-          <button type="submit" class="btn btn-primary">Login</button>
+        <form class="form-inline" action="/login" method="GET">
+          <button type="submit" class="btn btn-primary">Log in</button>
         </form>
       <% } %>
+      <form class="form-inline" action="/register" method="GET">
+        <button type="submit" class="btn btn-primary">Register</button>
+      </form>
     </div>
     
   </nav>
