--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -33,7 +33,7 @@
           <% for (let id in urls) { %>
             <tr>
               <td><%= id %></td>
-              <td><%= urls[id] %></td>
+              <td><%= urls[id].longURL %></td>
               <form method="POST" action="/urls/<%= id %>/edit">
                 <td><button type="submit" class="btn btn-primary">Edit</button></td>
               </form>
