use post urls/:id endpoint for URL edits instead of /urls/:id/edit

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -34,7 +34,7 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id].longURL %></td>
-              <form method="POST" action="/urls/<%= id %>/edit">
+              <form method="GET" action="/urls/<%= id %>">
                 <td><button type="submit" class="btn btn-primary">Edit</button></td>
               </form>
               <form method="POST" action="/urls/<%= id %>/delete">
