--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -20,7 +20,7 @@
         <p class="card-text">
           Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
         </p>
-        <form method="POST" action="/urls/<%= id %>/edit">
+        <form method="POST" action="/urls/<%= id %>">
           <div class="form-group mb-2">
             <label for="newLongURL">Edit target URL:</label>
             <input
